# aoi

./: Procfile  README.md  aoi.py  bot.py  fly.toml  pyproject.toml  requirements.txt
Aoi/: __init__.py  database.py  movers.py  profiles.py  setter.py  tenki_jp.py  translator.py  twitter.py  wiki.py
Aoi/locale/ja_JP/LC_MESSAGES/: aoi.mo  aoi.po
docs/: conf.py  index.rst
docs/apis/: Aoi.rst  modules.rst
