[tool.poetry]
name = "Aoi"
version = "0.1.0"
description = "Aoi is Discord bot to grant role"
authors = ["Yoiduki <90896806+y-muen@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
psycopg2 = "^2.9.3"
requests = "^2.28.1"
tweepy = "^4.10.0"
Jinja2 = "^3.1.2"
selenium = "^4.4.3"
Pillow = "^9.2.0"
requests-oauthlib = "^1.3.1"
emoji = "^2.0.0"
bottle = "^0.12.23"
pytz = "^2022.2.1"
numpy = "^1.23.2"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
pytest = "^7.1.2"
pydocstyle = "^6.1.1"
pycodestyle = "^2.9.1"
flake8 = "^5.0.4"
autopep8 = "^1.6.0"
matplotlib = "^3.5.3"
discordwebhook = "^1.0.3"
sphinx-markdown-builder = "^0.5.5"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
